# snippetly

./: .deploy.env.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DISASTER-RECOVERY.md  GEMINI.md  MONITORING.md  Makefile  PRE-COMMIT-SETUP.md  README.md  VM-QUICK-START.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  readme-deploy.md  readme-infra.md
backend/: .env.sample  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/config_envs/: .env.prod.sample  .env.sample  .env.test.sample
backend/docker/test/: Dockerfile
backend/ops/: upload_to_azure.py
backend/src/: main.py
backend/src/adapters/mongo/: client.py  documents.py  repo.py
backend/src/adapters/postgres/: async_db.py  connection.py  sync_db.py
backend/src/adapters/postgres/migrations/: env.py
backend/src/adapters/postgres/models/: __init__.py  accounts.py  enums.py  snippets.py
backend/src/adapters/postgres/repositories/: __init__.py  favorites.py  profile.py  snippet.py  token.py  user.py
backend/src/adapters/redis/: __init__.py  blacklist.py  client.py  common.py
backend/src/adapters/storage/: __init__.py  dev_storage.py  interface.py  prod_storage.py  stub_storage.py  validation.py
backend/src/admin/: admin.py  auth.py
backend/src/api/docs/: auth_error_examples.py  openapi.py
backend/src/api/v1/routes/: __init__.py  auth.py  auth_login.py  auth_password.py  auth_registration.py  docs.py  favorites.py  oauth2.py  profile.py  snippets.py
backend/src/api/v1/schemas/: auth.py  common.py  favorites.py  profiles.py  snippets.py
backend/src/core/app/: app.py  lifespan.py  limiter.py  middleware.py
backend/src/core/config/: __init__.py  api.py  base.py  components.py  config.py  dbs.py  email.py  mongo.py  postgres.py  redis.py  security.py  settings.py
backend/src/core/dependencies/: auth.py  auth_service.py  email.py  oauth.py  profile.py  redis.py  snippets.py  storage.py  token_manager.py
backend/src/core/dependencies/accounts/: __init__.py  auth.py  oauth.py  profile.py  repositories.py  token_manager.py
backend/src/core/dependencies/infrastructure/: __init__.py  email.py  storage.py
backend/src/core/dependencies/snippets/: __init__.py  repositories.py  snippets.py
backend/src/core/email/: __init__.py  email_sender.py  interface.py  stub.py  stub_sender.py
backend/src/core/exceptions/: __init__.py  exceptions.py
backend/src/core/security/: __init__.py  oauth2.py  password.py  validation.py
backend/src/core/security/jwt_manager/: __init__.py  interface.py  jwt_manager.py  token_manager.py
backend/src/core/utils/: __init__.py  logger.py  paginator.py
backend/src/features/auth/: __init__.py  auth_interface.py  auth_service.py  interface.py  user_service.py
backend/src/features/profile/: __init__.py  interface.py  service.py
backend/src/features/snippets/: __init__.py  interface.py  merger.py  snippet_service.py
backend/src/middleware/: prometheus.py
backend/src/worker/: app.py
backend/src/worker/tasks/: tags.py  tokens.py
backend/static/avatars/: .gitignore
backend/tests/: conftest.py
backend/tests/e2e/accounts/: helpers.py  routes.py  test_activation.py  test_auth.py  test_flow.py  test_password.py  test_profile.py  test_register.py
backend/tests/e2e/snippets/: routes.py  test_favorites.py  test_flow.py  test_search.py  test_snippets.py
backend/tests/factories/: __init__.py  snippet.py  user.py
backend/tests/fixtures/: __init__.py  auth.py  client.py  core.py  database.py  email.py  factories.py  jwt.py  profile.py  repositories.py  services.py  snippet.py  snippet_data.py  user.py  users.py
backend/tests/integration/adapters/: test_dev_storage.py
backend/tests/integration/core/: test_jwt.py
backend/tests/integration/repositories/: test_favorites_repo.py  test_profile_repo.py  test_snippet_doc_repo.py  test_snippet_model_repo.py  test_token_repos.py  test_user_repo.py
backend/tests/unit/: test_email.py
backend/tests/utils/: user.py
(+197 files in other folders)
