[project]
name = "snippetly-api"
version = "0.1.0"
description = "Snippetly - platform for creating and sharing code fragments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "beanie>=2.0.0",
    "fastapi>=0.117.1",
    "psycopg>=3.2.10",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
    "bcrypt>=4.3.0",
    "aiosmtplib>=4.0.2",
    "aiohttp>=3.12.15",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "starlette-admin>=0.15.1",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "B", "C", "E", "F", "W",
    "B9", "ANN", "Q0", "N8"
]
ignore = ["N807", "F401", "F405", "ANN204"]

[tool.ruff.format]
docstring-code-format = true


[tool.alembic]
path_separator = "os"
script_location = "src/adapters/postgres/migrations"
prepend_sys_path = "."
sqlalchemy.url = "driver://user:pass@localhost/dbname"


[tool.pyright]
include = ["src"]
exclude = ["src/adapters/postgres/migrations", "**/.venv", "**/venv", "**/__pycache__"]
typeCheckingMode = "basic"
